--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,48 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.calculator-container {
+  width: 100%;
+  display: grid;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+/* component: Display */
+.calculator-screen {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  background-color: rgb(108, 129, 151);
+}
+
+.calculator-display {
   color: white;
+  font-size: 1.5em;
+  padding: 0.7em;
+  font-weight: 400;
+  font-family: 'Times New Roman', Times, serif;
 }
 
-.App-link {
-  color: #61dafb;
+/* component: Button */
+.calculator-keypad {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
+.orange {
+  background-color: orange;
+}
 
-  to {
-    transform: rotate(360deg);
-  }
+.double {
+  grid-column: 1/3;
+}
+
+.btn {
+  border-radius: 0;
+  border-color: transparent;
+  box-shadow: 0 0 0.05em;
+  padding: 1.5em 3em;
+  font-weight: bold;
+}
+
+.btn:hover {
+  border-color: #9273402e;
+  cursor: pointer;
 }
