--- a/src/components/styles/Calculator.css
+++ b/src/components/styles/Calculator.css
@@ -6,6 +6,7 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  background-color: #f0f8fff5;
 }
 
 @media only screen and (min-width: 600px) {
