--- a/src/components/styles/Quote.css
+++ b/src/components/styles/Quote.css
@@ -5,5 +5,5 @@
   justify-content: center;
   align-items: center;
   font-weight: 100;
-  background-color: #f0f8ff69
+  background-color: #f0f8ff69;
 }
